welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value BaisseBrosse
def marque() {BaisseBrosse();leveBrosse()}
              ^