welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {for (i<-1 to 2) 
                    {lignemotif1(Color.red,Color.blue)
                     lignemotif2(Color.yellow,Color.green)}}



def motif2(c:Color) {setCouleurBrosse(c)
                  	 avance()
                     marque()
                     avance()
                     lal()
                     marque()
                     avance()
                     lal()
                     avance()}
def motif1(c:Color) {setCouleurBrosse(c)
                    am()
                    lal()
                    am()
                    lal()
                    avance()}


def marque() {BaisseBrosse();leveBrosse()}
def am() {avance();marque()}
def lal() {left();avance();left()}
def lignemotif1(a:Color,b:Color) {for (j<-1 to 2) {motif1(a);motif2(b)}} 
def lignemotif2(a:Color,b:Color) {for (j<-1 to 2) {motif2(a);motif1(b)}} 